# Windows_C_WebApp

./: CMakeLists.txt  README.md
include/: database.h  field_metadata.h  global.h  hash_table.h  html_parser.h  io.h  posts.h  server.h  session.h  users.h  utils.h  vector.h  views.h
include/lib/: sqlite3.lib
src/: database.c  global.c  global.h  hash_table.c  html_parser.c  io.c  main.c  posts.c  responses.h  server.c  server.h  session.c  user_database.c  user_database.h  users.c  utils.c  vector.c  views.c
src/templates/: about.html  base.html  index.html  login.html  profile.html  register.html
